add notepad function

--- a/NppPluginLua.vcxproj.filters
+++ b/NppPluginLua.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="PluginUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NppPluginNotepadLib.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="menuCmdID.h">
