--- a/NppPluginLua.vcxproj
+++ b/NppPluginLua.vcxproj
@@ -210,6 +210,7 @@
     <ClCompile Include="lua\lvm.c" />
     <ClCompile Include="lua\lzio.c" />
     <ClCompile Include="NppPluginLua.cpp" />
+    <ClCompile Include="NppPluginNotepadLib.cpp" />
     <ClCompile Include="PluginDefinition.cpp" />
     <ClCompile Include="PluginUtil.cpp" />
   </ItemGroup>
